syntax = "proto3";

package proto;

option go_package = "gophkeeper/proto";

message GetAllNotesRequest {
  string token = 1;
}

message NoteMsg {
  int64 id = 1;
  string note = 2;
  string metadata = 3;
}

message GetAllNotesResponse {
  repeated NoteMsg notes = 1;
  string error = 2;
}

service Text {
  rpc GetAll(GetAllNotesRequest) returns (GetAllNotesResponse);
}